# helms

./: .gitignore  Makefile  README.md  helms.cabal  helps.cabal  report.sh  run.sh
.output/actual/hlc/abstraction/: false.abstraction  logic.abstraction
.output/actual/hlc/combinator/: relude.combinator
.output/actual/hlc/ski/: logic.ski
.output/actual/lc/abstraction/: exp.abstraction
.output/actual/lc/combinator/: factorial.combinator  wiki.combinator
.output/actual/lc/ski/: exp.ski
.output/golden/hlc/abstraction/: mult.abstraction  prelude.abstraction  relude.abstraction
.output/golden/hlc/combinator/: logic.combinator  mult.combinator  prelude.combinator  reverse.combinator
.output/golden/hlc/ski/: false.ski  prelude.ski  relude.ski  reverse.ski  wiki.ski
.output/golden/lc/abstraction/: factorial.abstraction  reverse.abstraction  wiki.abstraction
.output/golden/lc/combinator/: exp.combinator
.output/golden/lc/ski/: factorial.ski
docs/: ARCHITECTURE.md  BUGS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  INSTALL.md  NEWS.md  README.md  ROADMAP.md  THANKS.md  TODO.md  _config.yml  dupe.md
docs/developers/: ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ROADMAP.md
docs/reports/: hlint.html  stan.html
docs/users/: INSTALL.md  NEWS.md  THANKS.md  TODO.md
examples/: iota.hs  iota.scm  prelude.scm  zot.scm
examples/hlc/: false.hlc  logic.hlc  mult.hlc  prelude.hlc  relude.hlc  reverse.hlc  wiki.hlc
examples/ihlc/: prelude.ihlc
examples/lc/: exp.lc  factorial.lc  prelude.hlc  prelude.lc  reverse.lc  wiki.lc
examples/lc/blynn/: exp.lc  supriseme.lc
examples/resources/: ETA.ss  IL.scm
examples/ski/: prelude.ski
examples/wlc/: prelude.wlc  wiki.wlc
hs/app/: AppOptions.hs  Main.hs
hs/src/: Schemer.hs
hs/src/HelVM/Common/: Util.hs
hs/src/HelVM/Common/Containers/: Util.hs
hs/src/HelVM/Common/Control/: Safe.hs
hs/src/HelVM/HelMS/: Cli.hs  Eval.hs  HelPS.hs  LispVal.hs  Parser.hs  Prim.hs  Repl.hs  Schemer.hs
hs/src/HelVM/HelMS/Calculus/: CodeGenerator.hs  Lambda.hs  Lexer.hs  Reducer.hs  Value.hs
hs/src/HelVM/HelMS/Calculus/API/: CalculusType.hs  CompilerOptions.hs  LambdaType.hs  Separator.hs  SwitchEnum.hs
hs/src/HelVM/HelMS/Calculus/Parsers/: BlcParser.hs  HaskellParser.hs  Parser.hs  WikiParser.hs
hs/src/HelVM/HelMS/Calculus/Reducers/: AbstractionReducer.hs  DefinedCombinatorReducer.hs  DefinedCombinatorRemover.hs  FromSki.hs  NameReducer.hs  NaturalReducer.hs  SkiReducer.hs
hs/src/HelVM/HelMS/Repl/: Option.hs  RepLine.hs  Types.hs
hs/test/: Main.hs
hs/test/HelVM/HelMS/Assemblers/: Expectations.hs
hs/test/HelVM/HelMS/Calculus/Parsers/: FileUtil.hs  HaskellParserSpec.hs  ParserSpec.hs  WikiParserSpec.hs
src/main/resources/: ETA.scm
